// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders dotted grey line 1`] = `
<View
  pointerEvents="none"
  style={
    Array [
      Object {
        "position": "absolute",
      },
      Object {
        "borderColor": "grey",
        "borderStyle": "dotted",
        "borderWidth": 1,
        "bottom": 0,
        "left": -1.5,
        "right": -1.5,
        "top": -2,
      },
    ]
  }
/>
`;

exports[`renders solid black line 1`] = `
<View
  pointerEvents="none"
  style={
    Array [
      Object {
        "position": "absolute",
      },
      Object {
        "borderColor": "black",
        "borderStyle": "solid",
        "borderWidth": 1,
        "bottom": 0,
        "left": -1.5,
        "right": -1.5,
        "top": -2,
      },
    ]
  }
/>
`;
